# hasql-resource-pool

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  default.nix  hasql-resource-pool.cabal
nixpkgs/: default.nix
nixpkgs/ghc-setup/: overrides.nix
