cabal-version:      3.6

name:               hasql-resource-pool
version:            1.9.1.2
category:           Hasql, Database, PostgreSQL
synopsis:           A pool of connections for Hasql based on resource-pool.
description:        This package was originally derived from hasql-pool v0.5.2.2. It continues using `resource-pool` for its pool implementation.
homepage:           https://github.com/avanov/hasql-resource-pool
bug-reports:        https://github.com/avanov/hasql-resource-pool/issues
author:             Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:         Maxim Avanov <maxim.avanov@gmail.com>
copyright:          (c) 2025, Maxim Avanov
license:            MIT
license-file:       LICENSE
build-type:         Simple

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: git://github.com/avanov/hasql-resource-pool.git
    branch:   master


library
    hs-source-dirs:   library
    ghc-options:
    default-extensions:
        Arrows,
        BangPatterns,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DeriveTraversable,
        EmptyDataDecls,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        LambdaCase,
        LiberalTypeSynonyms,
        MagicHash,
        MultiParamTypeClasses,
        MultiWayIf,
        NoImplicitPrelude,
        NoMonomorphismRestriction,
        OverloadedStrings,
        PatternGuards,
        ParallelListComp,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeFamilies,
        TypeOperators,
        UnboxedTuples
    default-language:
        Haskell2010
    exposed-modules:
        Hasql.Pool
        Hasql.Pool.Observer
    other-modules:
        Hasql.Pool.Prelude
    build-depends:
        -- resources:
        ,   resource-pool >= 0.4.0.0
        -- database:
        ,   hasql         >= 1.9.1.2 && < 2
        -- data:
        ,   time          >= 1.5 && < 2
        ,   clock         >= 0.8
        ,   text          >= 2.0
        -- general:
        ,   base-prelude  >= 1 && < 2

test-suite test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Main.hs
    default-extensions:
        Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
    default-language:
        Haskell2010
    build-depends:
        ,   base-prelude
        ,   hasql
        ,   hasql-resource-pool
        ,   hspec >= 2.6 && < 3
